<resources>
    <string name="app_name">Red Carpet Internship</string>
    <string name="news_app">News App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="search_anything">Search Anything</string>
    <string name="various_sources">Various Sources</string>
    <string name="list_of_sources">List of Sources \n Tap on any card to visit the site.</string>
    <string name="banner">banner</string>
    <string name="full_details_on">Full Details on:</string>
    <string name="source">Source:</string>
    <string name="logo">Logo</string>
</resources>