<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBack"
    android:padding="@dimen/paddingActivity"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".ui.view.HomeActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvTopHeadlines"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@android:color/holo_orange_dark"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@id/cvSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/top_headlines"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvSearch"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@android:color/holo_green_light"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toTopOf="@id/cvSources"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvTopHeadlines">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/search_anything"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvSources"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@android:color/holo_purple"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvSearch">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_black"
            android:text="@string/various_sources"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>