<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBack"
    android:padding="@dimen/paddingActivity"
    tools:context=".ui.view.NewsDetailActivity">

    <ImageView
        android:id="@+id/ivBanner"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_black"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBanner"
        tools:text="Armenia-Azerbaijan conflict: Casualties mount in Nagorno-Karabakh - BBC News" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/textColor"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/tvAuthor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeadline"
        tools:text="Armenia-Azerbaijan conflict: Casualties mount in Nagorno-Karabakh - BBC News" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_black_italic"
        android:text="@string/source"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/tvFullURL"
        app:layout_constraintEnd_toStartOf="@id/tvBy"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvBy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_black_italic"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/tvFullURL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvAuthor"
        tools:text="Alexandra Deabler by NPR" />

    <TextView
        android:id="@+id/tvFullURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/full_details_on"
        android:textColor="@color/textColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/tvURL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tvURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="https://www.bbc.com/news/world-europe-54338454" />

</androidx.constraintlayout.widget.ConstraintLayout>